2005-03-16  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-alpha/tlsbin.rd: Updated for empty section removal.
	* ld-alpha/tlsbinr.rd: Likewise.
	* ld-alpha/tlspic.rd: Likewise.
	* ld-arm/mixed-lib.sym: Likewise.
	* ld-i386/tlsbin.rd: Likewise.
	* ld-i386/tlsnopic.rd: Likewise.
	* ld-i386/tlspic.rd: Likewise.
	* ld-ia64/tlsbin.rd: Likewise.
	* ld-ia64/tlspic.rd: Likewise.
	* ld-powerpc/apuinfo.rd: Likewise.
	* ld-powerpc/powerpc.exp: Likewise.
	* ld-powerpc/tlsexe32.r: Likewise.
	* ld-s390/tlsbin.rd: Likewise.
	* ld-s390/tlsbin_64.rd: Likewise.
	* ld-s390/tlspic.rd: Likewise.
	* ld-s390/tlspic_64.rd: Likewise.
	* ld-sh/tlsbin-2.d: Likewise.
	* ld-sh/tlspic-2.d: Likewise.
	* ld-sparc/tlssunbin32.rd: Likewise.
	* ld-sparc/tlssunnopic32.rd: Likewise.
	* ld-sparc/tlssunpic32.rd: Likewise.
	* ld-x86-64/tlsbin.rd: Likewise.
	* ld-x86-64/tlspic.rd: Likewise.

2005-03-16  Alan Modra  <amodra@bigpond.net.au>

	* ld-powerpc/tlsexe32.d: Update.
	* ld-powerpc/tlsexe32.g: Update.
	* ld-powerpc/tlsexe32.r: Update.
	* ld-powerpc/tlsexe32.t: Update.
	* ld-powerpc/tlsso32.d: Update.
	* ld-powerpc/tlsso32.g: Update.
	* ld-powerpc/tlsso32.r: Update.
	* ld-powerpc/tlsso32.t: Update.

2005-03-08  Hans-Peter Nilsson  <hp@axis.com>

	Adjust testsuite for cris-axis-aout.
	* ld-cris/noglob1.d: Adjust regexp for a.out output.
	* ld-cris/badgotr1.d, ld-cris/expdyn1.d, ld-cris/expdyn2.d,
	ld-cris/expdyn3.d, ld-cris/expdyn4.d, ld-cris/expdyn5.d,
	ld-cris/expdyn6.d, ld-cris/expdyn7.d, ld-cris/gotplt1.d,
	ld-cris/gotplt2.d, ld-cris/gotplt3.d, ld-cris/hiddef1.d,
	ld-cris/libdso-1.d, ld-cris/libdso-10.d, ld-cris/libdso-11.d,
	ld-cris/libdso-12.d, ld-cris/libdso-13.d, ld-cris/libdso-14.d,
	ld-cris/libdso-2.d, ld-cris/libdso-3.d, ld-cris/libdso-4.d,
	ld-cris/locref1.d, ld-cris/locref2.d, ld-cris/nodyn4.d,
	ld-cris/nodyn5.d, ld-cris/pv32-1.d, ld-cris/undef1.d,
	ld-cris/weakref1.d: ld-cris/weakref2.d: Pass --em=criself to gas.
	* ld-cris/v10-v32.d, ld-cris/v10-va.d, ld-cris/v32-ba-1.d,