@@ -10,7 +10,7 @@
 # entries.  This formerly SEGV:ed because .rela.got was created
 # too late to have it mapped to an output section.
 
-There are 15 section headers.*
+There are 14 section headers.*
 #...
   \[ 1\] \.hash             HASH     .*
   \[ 2\] \.dynsym           DYNSYM   .*
@@ -21,11 +21,10 @@ There are 15 section headers.*
   \[ 7\] \.text             PROGBITS .*
   \[ 8\] \.dynamic          DYNAMIC  .*
   \[ 9\] \.got              PROGBITS .*
-  \[10\] \.data             PROGBITS .*
-  \[11\] \.bss              NOBITS   .*
-  \[12\] \.shstrtab         STRTAB   .*
-  \[13\] \.symtab           SYMTAB   .*
-  \[14\] \.strtab           STRTAB   .*
+  \[10\] \.bss              NOBITS   .*
+  \[11\] \.shstrtab         STRTAB   .*
+  \[12\] \.symtab           SYMTAB   .*
+  \[13\] \.strtab           STRTAB   .*
 #...
 Relocation section '\.rela\.dyn' at offset 0x[0-9a-f]+ contains 1 entries:
 #...
@@ -35,12 +34,12 @@ Symbol table '\.dynsym' contains 6 entries:
    Num:    Value  Size Type    Bind   Vis      Ndx Name
      0: 0+     0 NOTYPE  LOCAL  DEFAULT  UND 
      1: [0-9a-f]+     0 SECTION LOCAL  DEFAULT    7 
-     2: [0-9a-f]+     0 SECTION LOCAL  DEFAULT   10 
-     3: [0-9a-f]+     0 SECTION LOCAL  DEFAULT   11 
+     2: [0-9a-f]+     0 NOTYPE  LOCAL  DEFAULT  UND 
+     3: [0-9a-f]+     0 SECTION LOCAL  DEFAULT   10 
      4: 0+     0 OBJECT  GLOBAL DEFAULT  ABS TST1
      5: 0+188     0 FUNC    GLOBAL DEFAULT    7 export_1@@TST1
 
-Symbol table '\.symtab' contains 23 entries:
+Symbol table '\.symtab' contains 22 entries:
    Num:    Value  Size Type    Bind   Vis      Ndx Name
      0: 0+     0 NOTYPE  LOCAL  DEFAULT  UND 
      1: [0-9a-f]+     0 SECTION LOCAL  DEFAULT    1 
@@ -56,12 +55,11 @@ Symbol table '\.symtab' contains 23 entries:
     11: [0-9a-f]+     0 SECTION LOCAL  DEFAULT   11 
     12: [0-9a-f]+     0 SECTION LOCAL  DEFAULT   12 
     13: [0-9a-f]+     0 SECTION LOCAL  DEFAULT   13 
-    14: [0-9a-f]+     0 SECTION LOCAL  DEFAULT   14 
-    15: 0+21a0     0 OBJECT  LOCAL  DEFAULT  ABS _DYNAMIC
-    16: 0+2238     0 NOTYPE  LOCAL  DEFAULT  ABS __bss_start
-    17: 0+2238     0 NOTYPE  LOCAL  DEFAULT  ABS _edata
-    18: 0+2228     0 OBJECT  LOCAL  HIDDEN  ABS _GLOBAL_OFFSET_TABLE_
-    19: 0+2240     0 NOTYPE  LOCAL  DEFAULT  ABS _end
-    20: 0+184     0 FUNC    LOCAL  DEFAULT    7 dsofn
-    21: 0+     0 OBJECT  GLOBAL DEFAULT  ABS TST1
-    22: 0+188     0 FUNC    GLOBAL DEFAULT    7 export_1
+    14: 0+21a0     0 OBJECT  LOCAL  DEFAULT  ABS _DYNAMIC
+    15: 0+2238     0 NOTYPE  LOCAL  DEFAULT  ABS __bss_start
+    16: 0+2238     0 NOTYPE  LOCAL  DEFAULT  ABS _edata
+    17: 0+2228     0 OBJECT  LOCAL  HIDDEN  ABS _GLOBAL_OFFSET_TABLE_
+    18: 0+2240     0 NOTYPE  LOCAL  DEFAULT  ABS _end
+    19: 0+184     0 FUNC    LOCAL  DEFAULT    7 dsofn
+    20: 0+     0 OBJECT  GLOBAL DEFAULT  ABS TST1
+    21: 0+188     0 FUNC    GLOBAL DEFAULT    7 export_1
