@@ -1,5 +1,11 @@
 2005-03-16  H.J. Lu  <hongjiu.lu@intel.com>
 
+	* ld-cris/hiddef1.d: Updated for empty section removal.
+	* ld-cris/libdso-10.d: Likewise.
+	* ld-cris/libdso-2.d: Likewise.
+
+2005-03-16  H.J. Lu  <hongjiu.lu@intel.com>
+
 	* ld-alpha/tlsbin.rd: Updated for empty section removal.
 	* ld-alpha/tlsbinr.rd: Likewise.
 	* ld-alpha/tlspic.rd: Likewise.
